WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180549
Fix erroneous ASSERT in DocumentThreadableLoader::didFail
https://bugs.webkit.org/show_bug.cgi?id=180549
Summary
Fix erroneous ASSERT in DocumentThreadableLoader::didFail
youenn fablet
Reported
2017-12-07 14:47:41 PST
It should check for resource request to be null and not for optional to be empty
Attachments
Patch
(1.88 KB, patch)
2017-12-07 14:54 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(1.84 KB, patch)
2017-12-07 14:54 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-12-07 14:54:17 PST
Created
attachment 328744
[details]
Patch
youenn fablet
Comment 2
2017-12-07 14:54:53 PST
Created
attachment 328745
[details]
Patch
WebKit Commit Bot
Comment 3
2017-12-07 15:30:37 PST
Comment on
attachment 328745
[details]
Patch Clearing flags on attachment: 328745 Committed
r225648
: <
https://trac.webkit.org/changeset/225648
>
WebKit Commit Bot
Comment 4
2017-12-07 15:30:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2017-12-07 15:31:37 PST
<
rdar://problem/35921238
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug